--- a/src/new-components/modal/modal.module.css
+++ b/src/new-components/modal/modal.module.css
@@ -137,8 +137,3 @@
     align-items: center;
     height: 32px;
 }
-
-.closeButtonIcon {
-    margin-left: -4px;
-    margin-top: -3px;
-}
